[metadata]
name = pyctbuild
version = attr: pyctbuild.version.get_setup_version2
description = PyViz common build time/setup.py stuff
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Development Status :: 3 - Alpha
author = PyViz
author_email = holoviews@gmail.com
maintainer = PyViz
maintainer_email = holoviews@gmail.com
url = https://github.com/pyviz/pyct
project_urls =
    Bug Tracker = https://github.com/pyviz/pyct
    Documentation = https://github.com/pyviz/pyctbuild
    Source Code = https://github.com/pyviz/pyctbuild


[options]
include_package_data = True
packages = find:
python_requires = >=2.7
install_requires =

[options.extras_require]
tests =
    flake8
    pytest >=2.8.5

doc =
    nbsite
    sphinx_ioam_theme

[wheel]
universal = 1

[tool:autover]
reponame = pyctbuild
